S09-APIM_with_Istio/api-manager/api-portal/apis-gateway-vs.yaml
#Copyright (c)  WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# WSO2 Inc. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: apis-gateway
  namespace: wso2
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
        # credentialName: apis-wso2-credential
      hosts:
        - "apis.wso2.com"
        - "gateway.wso2.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apis-virtualservice
  namespace: wso2
spec:
  hosts:
  - "apis.wso2.com"
  - "gateway.wso2.com"
  gateways:
  - apis-gateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - apis.wso2.com
    route:
    - destination:
        host: wso2apim
        port:
          number: 9443
  - match:
    - port: 443
      sniHosts:
      - gateway.wso2.com
    route:
    - destination:
        host: wso2apim
        port:
          number: 8243
    # corsPolicy:
    #  allowOrigins:
    #    - regex: .*
    #  allowMethods:
    #    - POST
    #    - GET
    #    - PUT
    #    - DELETE
    #  allowCredentials: false
    #  allowHeaders:
    #    - authorization
    #    - Access-Control-Allow-Origin
    #    - Content-Type
    #    - SOAPAction
    #    - apikey
    #    - Authorization
